force-app/main/default/objects/EFTPOS_Device__c/EFTPOS_Device__c.object-meta.xml
<CustomObject>
    <description>Details about the individual EFTPOS Device</description>
    <label>EFTPOS Device</label>
    <nameField>
        <displayFormat>EFTPOS-{0}</displayFormat>
        <label>EFTPOS Device Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EFTPOS Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>