force-app/main/default/objects/EFTPOS_Device__c/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <description>This field holds the value of field &quot;Accessories&quot; from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accessories</label>
    <length>225</length>
    <type>Text</type>
</CustomField>