force-app/main/default/objects/EFTPOS_Device__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Salesforce Account the EFTPOS device is linked to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EFTPOS Devices</relationshipLabel>
    <relationshipName>EFTPOS_Devices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>