force-app/main/default/objects/EFTPOS_Device__c/fields/Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Acquirer__c</fullName>
    <description>This field holds the value of the field &quot;Acquirer&quot; from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Acquirer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>