force-app/main/default/objects/EFTPOS_Device__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <label>Association</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>group1</fullName>
            </value>
            <value>
                <fullName>quest</fullName>
            </value>
            <value>
                <fullName>yazara</fullName>
            </value>
            <value>
                <fullName>webgate</fullName>
                <isActive>false</isActive>
                <label>webgate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>