force-app/main/default/objects/EFTPOS_Device__c/fields/Base_Station_S_N__c.field-meta.xml
<CustomField>
    <fullName>Base_Station_S_N__c</fullName>
    <description>This field holds the value of the field &quot;Base Station S/N&quot; from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Base Station S/N</label>
    <length>50</length>
    <type>Text</type>
</CustomField>