force-app/main/default/objects/EFTPOS_Device__c/fields/Cashout__c.field-meta.xml
<CustomField>
    <fullName>Cashout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cashout</label>
    <type>Checkbox</type>
</CustomField>