force-app/main/default/objects/EFTPOS_Device__c/fields/Cloud_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cloud Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>