force-app/main/default/objects/EFTPOS_Device__c/fields/Comms__c.field-meta.xml
<CustomField>
    <fullName>Comms__c</fullName>
    <description>This field holds the value of Comms from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comms</label>
    <length>15</length>
    <type>Text</type>
</CustomField>