force-app/main/default/objects/EFTPOS_Device__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>This field holds the value of the field &quot;Company Code&quot; from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>