force-app/main/default/objects/EFTPOS_Device__c/fields/Con__c.field-meta.xml
<CustomField>
    <fullName>Con__c</fullName>
    <description>This field will contain the value from &quot;Con#&quot; of the smartpay dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>