force-app/main/default/objects/EFTPOS_Device__c/fields/Courier_Used__c.field-meta.xml
<CustomField>
    <fullName>Courier_Used__c</fullName>
    <description>This field holds the value of the field &quot;Courier Used&quot; from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Courier Used</label>
    <length>50</length>
    <type>Text</type>
</CustomField>