force-app/main/default/objects/EFTPOS_Device__c/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <description>This field holds the value of the field &quot;Credit Card %&quot; from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Card %</label>
    <length>200</length>
    <type>Text</type>
</CustomField>