force-app/main/default/objects/EFTPOS_Device__c/fields/Debit_Card_Fee__c.field-meta.xml
<CustomField>
    <fullName>Debit_Card_Fee__c</fullName>
    <description>This field holds the value of the field &quot;Debit Card Fee $&quot; from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Debit Card Fee $</label>
    <length>255</length>
    <type>Text</type>
</CustomField>