force-app/main/default/objects/EFTPOS_Device__c/fields/Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instructions__c</fullName>
    <description>This field holds the value of the field &quot;Delivery Instructions&quot; from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>