force-app/main/default/objects/EFTPOS_Device__c/fields/Dispatch_Number__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Number__c</fullName>
    <description>Dispatch Number for Terminal Device</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dispatch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>