force-app/main/default/objects/EFTPOS_Device__c/fields/Encrypted_Customer_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Customer_Order_Id__c</fullName>
    <description>Encrypted Quest Customer Order Id</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Encrypted Quest Customer Order Id</inlineHelpText>
    <label>Encrypted Customer Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>