force-app/main/default/objects/EFTPOS_Device__c/fields/EncryptionKeyId__c.field-meta.xml
<CustomField>
    <fullName>EncryptionKeyId__c</fullName>
    <defaultValue>&quot;bdk&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>EncryptionKeyId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>