force-app/main/default/objects/EFTPOS_Device__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>This field holds the value of &quot;full name&quot; field from the dispatch file</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Full Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>