force-app/main/default/objects/EFTPOS_Device__c/fields/Hard_Limit_profile__c.field-meta.xml
<CustomField>
    <fullName>Hard_Limit_profile__c</fullName>
    <description>Display Hard Limit profile value from account</description>
    <label>Hard Limit profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10K Low HL</fullName>
                <label>10K Low - Hard Limit</label>
            </value>
            <value>
                <fullName>10K Med HL</fullName>
                <label>10K Med - Hard Limit</label>
            </value>
            <value>
                <fullName>10K High HL</fullName>
                <label>10K High - Hard Limit</label>
            </value>
            <value>
                <fullName>20K Low HL</fullName>
                <label>20K Low - Hard Limit</label>
            </value>
            <value>
                <fullName>20K Med HL</fullName>
                <label>20K Med - Hard Limit</label>
            </value>
            <value>
                <fullName>20K High HL</fullName>
                <label>20K High - Hard Limit</label>
            </value>
            <value>
                <fullName>50K Low HL</fullName>
                <label>50K Low - Hard Limit</label>
            </value>
            <value>
                <fullName>50K Med HL</fullName>
                <label>50K Med - Hard Limit</label>
            </value>
            <value>
                <fullName>50K High HL</fullName>
                <label>50K High - Hard Limit</label>
            </value>
            <value>
                <fullName>100K Low HL</fullName>
                <label>100K Low - Hard Limit</label>
            </value>
            <value>
                <fullName>100K Med HL</fullName>
                <label>100K Med - Hard Limit</label>
            </value>
            <value>
                <fullName>100K High HL</fullName>
                <label>100K High - Hard Limit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>