force-app/main/default/objects/EFTPOS_Device__c/fields/Lane_Number__c.field-meta.xml
<CustomField>
    <fullName>Lane_Number__c</fullName>
    <description>Lane Number indexes the Quest record type EFTPOS devices related to the parent Account, representing the order of insertion.</description>
    <label>Lane Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>