force-app/main/default/objects/EFTPOS_Device__c/fields/LCR__c.field-meta.xml
<CustomField>
    <fullName>LCR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Least Cost Routing a.k.a. Merchant Choice Routing (MCR)</description>
    <inlineHelpText>Least Cost Routing</inlineHelpText>
    <label>LCR</label>
    <type>Checkbox</type>
</CustomField>