force-app/main/default/objects/EFTPOS_Device__c/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <description>EFTPOS Merchant ID (Supplied by Vendor)</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Merchant ID</label>
    <type>TextArea</type>
</CustomField>