force-app/main/default/objects/EFTPOS_Device__c/fields/Merchant_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Passcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Merchant Passcode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>