force-app/main/default/objects/EFTPOS_Device__c/fields/Migration_Completed__c.field-meta.xml
<CustomField>
    <fullName>Migration_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates when the Portal migration is completed</description>
    <label>Migration Completed</label>
    <type>Checkbox</type>
</CustomField>