force-app/main/default/objects/EFTPOS_Device__c/fields/Migration_Date__c.field-meta.xml
<CustomField>
    <fullName>Migration_Date__c</fullName>
    <description>Date when the migration was completed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when the migration was completed - for Quest</inlineHelpText>
    <label>Migration Date</label>
    <type>Date</type>
</CustomField>