force-app/main/default/objects/EFTPOS_Device__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>This field holds the value of the field &quot;Mobile&quot; from the dispatch file</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Mobile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>