force-app/main/default/objects/EFTPOS_Device__c/fields/MOTO__c.field-meta.xml
<CustomField>
    <fullName>MOTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOTO</label>
    <type>Checkbox</type>
</CustomField>