force-app/main/default/objects/EFTPOS_Device__c/fields/Multi_MID_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Multi_MID_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>allows for multiple POS IDs</description>
    <label>Multi-MID Enabled</label>
    <type>Checkbox</type>
</CustomField>