force-app/main/default/objects/EFTPOS_Device__c/fields/Offline__c.field-meta.xml
<CustomField>
    <fullName>Offline__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>the permission to perform offline transactions</inlineHelpText>
    <label>Offline</label>
    <type>Checkbox</type>
</CustomField>