force-app/main/default/objects/EFTPOS_Device__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This field holds the value of the field &quot;Phone&quot; from the dispatch file</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>