force-app/main/default/objects/EFTPOS_Device__c/fields/POS_Gateway_ID__c.field-meta.xml
<CustomField>
    <fullName>POS_Gateway_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POS Gateway ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>