force-app/main/default/objects/EFTPOS_Device__c/fields/POS_Id__c.field-meta.xml
<CustomField>
    <fullName>POS_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POS Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>