force-app/main/default/objects/EFTPOS_Device__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>This field holds the value of the field &quot;Postal Code&quot; from the dispatch file</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>