force-app/main/default/objects/EFTPOS_Device__c/fields/Postal_Country__c.field-meta.xml
<CustomField>
    <fullName>Postal_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>