force-app/main/default/objects/EFTPOS_Device__c/fields/Postal_State__c.field-meta.xml
<CustomField>
    <fullName>Postal_State__c</fullName>
    <description>This field holds the value of the field &quot;Postal State&quot; from the dispatch file</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Postal State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>