force-app/main/default/objects/EFTPOS_Device__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>This field holds the value of the field &quot;Product Type&quot; from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>