force-app/main/default/objects/EFTPOS_Device__c/fields/Quest_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Quest_API_Name__c</fullName>
    <description>Quest API Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quest API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>