force-app/main/default/objects/EFTPOS_Device__c/fields/Quest_API_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Quest_API_Response_Code__c</fullName>
    <description>Quest API Response Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quest API Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>