force-app/main/default/objects/EFTPOS_Device__c/fields/Quest_API_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Quest_API_Response_Message__c</fullName>
    <description>Quest API Response Message</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quest API Response Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>