force-app/main/default/objects/EFTPOS_Device__c/fields/Quest_API_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Quest_API_Update_Date__c</fullName>
    <description>Quest API Update Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quest API Update Date</label>
    <type>DateTime</type>
</CustomField>