force-app/main/default/objects/EFTPOS_Device__c/fields/Quest_Customer_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Quest_Customer_Order_Id__c</fullName>
    <description>Quest Customer Order Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quest Customer Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>