force-app/main/default/objects/EFTPOS_Device__c/fields/Quest_Notification_Url__c.field-meta.xml
<CustomField>
    <fullName>Quest_Notification_Url__c</fullName>
    <description>Quest Notification Url</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quest Notification Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>