force-app/main/default/objects/EFTPOS_Device__c/fields/Quest_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Quest_Order_Status__c</fullName>
    <description>Quest Order Status</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quest Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>