force-app/main/default/objects/EFTPOS_Device__c/fields/Quest_Terminal_Id__c.field-meta.xml
<CustomField>
    <fullName>Quest_Terminal_Id__c</fullName>
    <description>Quest Terminal Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quest Terminal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>