force-app/main/default/objects/EFTPOS_Device__c/fields/Refund_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Refund_Passcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund Passcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>