force-app/main/default/objects/EFTPOS_Device__c/fields/Return_Con__c.field-meta.xml
<CustomField>
    <fullName>Return_Con__c</fullName>
    <description>This field holds the value of the field &quot;Return Con#&quot; from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Return Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>