force-app/main/default/objects/EFTPOS_Device__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>This field holds the value of the field &quot;Serial Number&quot; from the dispatch file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>