force-app/main/default/objects/EFTPOS_Device__c/fields/Shipping_date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>provided by Quest on shipping</inlineHelpText>
    <label>Shipping date</label>
    <type>Date</type>
</CustomField>