force-app/main/default/objects/EFTPOS_Device__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <defaultValue>&quot;EZI&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Name</label>
    <length>3</length>
    <type>Text</type>
</CustomField>