force-app/main/default/objects/EFTPOS_Device__c/fields/Single_API_Terminal_ID__c.field-meta.xml
<CustomField>
    <fullName>Single_API_Terminal_ID__c</fullName>
    <description>Single API Terminal ID Move from TID to EFTPOS to simplify Multi-Mid Onboarding process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Single API Terminal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>