force-app/main/default/objects/EFTPOS_Device__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <description>Supplier of EFTPOS device</description>
    <label>Supplier Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smartpay</fullName>
            </value>
            <value>
                <fullName>Quest</fullName>
            </value>
            <value>
                <fullName>Latpay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>