force-app/main/default/objects/EFTPOS_Device__c/fields/Supported_Card_Types__c.field-meta.xml
<CustomField>
    <fullName>Supported_Card_Types__c</fullName>
    <label>Supported Card Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>visa</fullName>
                <label>VS</label>
            </value>
            <value>
                <fullName>mastercard</fullName>
                <label>MC</label>
            </value>
            <value>
                <fullName>eftpos</fullName>
                <label>EFT</label>
            </value>
            <value>
                <fullName>amex</fullName>
                <label>AMEX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>