force-app/main/default/objects/EFTPOS_Device__c/fields/Surcharging__c.field-meta.xml
<CustomField>
    <fullName>Surcharging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surcharging</label>
    <type>Checkbox</type>
</CustomField>