force-app/main/default/objects/EFTPOS_Device__c/fields/Surcharging_Confirmation_Prompts__c.field-meta.xml
<CustomField>
    <fullName>Surcharging_Confirmation_Prompts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populate value from opportunity surcharging prompt.</description>
    <label>Surcharging Confirmation Prompts</label>
    <type>Checkbox</type>
</CustomField>