force-app/main/default/objects/EFTPOS_Device__c/fields/Terminal_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Activation_Date__c</fullName>
    <description>Date Terminal is Sent/Activated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Terminal Activation Date</label>
    <type>Date</type>
</CustomField>