force-app/main/default/objects/EFTPOS_Device__c/fields/Terminal_Branding__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Branding__c</fullName>
    <label>Terminal Branding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ezidebit</fullName>
            </value>
            <value>
                <fullName>Eway</fullName>
            </value>
            <value>
                <fullName>Global Payments</fullName>
            </value>
            <value>
                <fullName>Storage King (Ezidebit)</fullName>
            </value>
            <value>
                <fullName>Hairware Beautyware (Ezidebit)</fullName>
            </value>
            <value>
                <fullName>Guestpoint (Eway)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>