force-app/main/default/objects/EFTPOS_Device__c/fields/Terminal_ID__c.field-meta.xml
<CustomField>
    <fullName>Terminal_ID__c</fullName>
    <description>Terminal ID for the EFTPOS device (Supplied by Vendor)</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Terminal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>