force-app/main/default/objects/EFTPOS_Device__c/fields/Terminal_Integration_Mode__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Integration_Mode__c</fullName>
    <label>Terminal Integration Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>