force-app/main/default/objects/EFTPOS_Device__c/fields/Terminal_Package__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Package__c</fullName>
    <label>Terminal Package</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Terminal_Integration_Mode__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cordless Kit - 890-0185-01 + 890-0187-01</fullName>
            </value>
            <value>
                <fullName>Cordless Kit With Printer - 890-0182-01 + 890-0187-01 + 820-0014-01</fullName>
            </value>
            <value>
                <fullName>USB Kit - 890-0173-01</fullName>
            </value>
            <value>
                <fullName>Integrated via USB, Quest Ordering Package: 890-0185-01</fullName>
                <isActive>false</isActive>
                <label>Integrated via USB, Quest Ordering Package: 890-0185-01</label>
            </value>
            <value>
                <fullName>Integrated via Wifi/4G with Printer, Quest Ordering Package: 890-0180-01 + 890-0187-01</fullName>
                <isActive>false</isActive>
                <label>Integrated via Wifi/4G with Printer, Quest Ordering Package: 890-0180-01 + 890-0187-01</label>
            </value>
            <value>
                <fullName>Integrated via Wifi/4G, Quest Ordering Package: 890-0185-01 + 890-0187-01</fullName>
                <isActive>false</isActive>
                <label>Integrated via Wifi/4G, Quest Ordering Package: 890-0185-01 + 890-0187-01</label>
            </value>
            <value>
                <fullName>Stand Alone via Wifi/4G with Printer, Quest Ordering Package: 890-0180-01 + 890-0187-01</fullName>
                <isActive>false</isActive>
                <label>Stand Alone via Wifi/4G with Printer, Quest Ordering Package: 890-0180-01 + 890-0187-01</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>