force-app/main/default/objects/EFTPOS_Device__c/fields/Terminal_Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Returned_Date__c</fullName>
    <description>Date that this EFTPOS terminal was returned to Smartpay by the merchant.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that this EFTPOS terminal was returned to Smartpay by the merchant.</inlineHelpText>
    <label>Terminal Returned Date</label>
    <type>Date</type>
</CustomField>