force-app/main/default/objects/EFTPOS_Device__c/fields/Terminal_Type__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Type__c</fullName>
    <label>Terminal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quest 850</fullName>
                <default>true</default>
                <label>Quest 850</label>
            </value>
            <value>
                <fullName>Quest 720</fullName>
            </value>
            <value>
                <fullName>Yazara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>