force-app/main/default/objects/EFTPOS_Device__c/fields/Tipping__c.field-meta.xml
<CustomField>
    <fullName>Tipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tipping</label>
    <type>Checkbox</type>
</CustomField>