force-app/main/default/objects/EFTPOS_Device__c/fields/Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name__c</fullName>
    <description>This field holds the value of &quot;Trading Name&quot; field from the dispatch file</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Trading Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>