force-app/main/default/objects/EFTPOS_Device__c/fields/Type_of_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Terminal__c</fullName>
    <description>This field holds the type of terminal value from the dispatch file.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of Terminal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>