force-app/main/default/objects/EFTPOS_Device__c/fields/Yazara_Merchant_API_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Yazara_Merchant_API_Response_Code__c</fullName>
    <description>Yazara API Merchant Response Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Yazara API Merchant Response Code</inlineHelpText>
    <label>Yazara Merchant API Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>