force-app/main/default/objects/EFTPOS_Device__c/fields/Yazara_Merchant_API_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Yazara_Merchant_API_Response_Message__c</fullName>
    <description>Yazara Merchant API Response Message</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Yazara Merchant API Response Message</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>