force-app/main/default/objects/EFTPOS_Device__c/fields/Yazara_Merchant_Configuration_Date__c.field-meta.xml
<CustomField>
    <fullName>Yazara_Merchant_Configuration_Date__c</fullName>
    <description>Yazara Merchant Configuration Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Yazara Merchant Configuration Date</label>
    <type>DateTime</type>
</CustomField>