force-app/main/default/objects/EFTPOS_Device__c/recordTypes/LatPay.recordType-meta.xml
<RecordType>
    <fullName>LatPay</fullName>
    <active>false</active>
    <label>LatPay</label>
</RecordType>