force-app/main/default/objects/EFTPOS_Device__c/recordTypes/Quest.recordType-meta.xml
<RecordType>
    <fullName>Quest</fullName>
    <active>true</active>
    <label>Quest</label>
</RecordType>