force-app/main/default/objects/EFTPOS_Device__c/recordTypes/SmartPay.recordType-meta.xml
<RecordType>
    <fullName>SmartPay</fullName>
    <active>true</active>
    <label>SmartPay</label>
</RecordType>