force-app/main/default/objects/EFTPOS_Device__c/recordTypes/SoftPOS.recordType-meta.xml
<RecordType>
    <fullName>SoftPOS</fullName>
    <active>true</active>
    <label>SoftPOS</label>
</RecordType>