force-app/main/default/objects/EFTPOS_Device__c/recordTypes/VisionPay.recordType-meta.xml
<RecordType>
    <fullName>VisionPay</fullName>
    <active>false</active>
    <label>VisionPay</label>
</RecordType>