force-app/main/default/objects/EFTPOS_Device__c/validationRules/Quest_Length_of_Merchant_ID_must_be_15.validationRule-meta.xml
<ValidationRule>
    <fullName>Quest_Length_of_Merchant_ID_must_be_15</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.Name = &quot;Quest&quot;,
 LEN(Merchant_ID__c)!=15)</errorConditionFormula>
    <errorDisplayField>Merchant_ID__c</errorDisplayField>
    <errorMessage>Length of Quest Merchant ID must be 15 characters</errorMessage>
</ValidationRule>