force-app/main/default/objects/EFTPOS_Device__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Supported_Card_Types__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>